wp/wp-content/themes/ue-theme/assets/main.scss
/* ... */
/* Author */

.author-avatar {
	.avatar {
		width: 64px;
		height: auto;
	}
}

.author-info {
	margin: 40px 0;

	h2,
	h3 {
		margin-top: 0;
	}
}

/* Posts */

.sticky {
	.card {
		background-color: $gray-100;
	}
}

.entry-meta {
	font-size: small;
	margin-top: ($grid-gutter-width * .5);
}

.single {
	.entry-content,
	.post-navigation,
	#comments-title {
		margin: $grid-gutter-width 0;
	}
}

#comments {
	margin-top: $grid-gutter-width;
}

.comment-meta {
	height: 40px;
}

.comment-reply-title {
	margin: $grid-gutter-width 0 ($grid-gutter-width * .5);
}

.commentlist {
	list-style: none;
	margin: 0 auto;
	width: 68.9%;

	> li.comment {
		margin: 0 0 1.625em;
		padding: 1.625em;
		position: relative;
	}

	.children {
		list-style: none;
		margin-top: $grid-gutter-width;

		> li.comment {
			border-top: 1px solid $gray-300;
			padding-top: $grid-gutter-width;
			position: relative;
		}
	}

	.avatar {
		width: 64px;
		height: 64px;
		border-radius: 50%;
		box-shadow: 0 1px 2px $gray-600;
		padding: 0;
		position: absolute;
		top: 0;
		left: -102px;
	}
}

/* WordPress Blocks */

// Buttons

.wp-block-button {
	&.is-style-outline {
		.wp-block-button__link {
			@extend .btn;
			@extend .btn-outline-primary;
		}
	}

	&.btn-lg {
		.wp-block-button__link {
			@extend .btn-lg;
		}
	}
	&.btn-sm {
		.wp-block-button__link {
			@extend .btn-sm;
		}
	}

	.wp-block-button__link {
		@extend .btn;
		@extend .btn-primary;
		text-decoration: none;
	}
}

// Table

.wp-block-table {
	td,
	th {
		border: inherit;
	}

	table {
		@extend .table;
	}
}

// Image, Media and Text

.wp-block-image,
.wp-block-media-text__media {
	img,
	video {
		height: auto;
	}
}


/**
 * Responsive Design using "mixins/_breakpoints.scss"
 */

@media (max-width: breakpoint-max(sm)) {
	#sidebar {
		margin-top: 60px;
	}
}

/** SEARCH FORM*/
// open on click search form behaviour //

.home-nav.navbar-default .navbar-nav>li input.search-field {
	color: #848484;
	background-image: url(../../node_modules/bootstrap-icons/icons/search.svg);
	// wp/wp-content/themes/ue-theme/node_modules/bootstrap-icons/icons/search.svg
  }
  
  .home-nav.navbar-default .navbar-nav>li input.search-field:focus {
	border-color: #BABABA;
  }
  
  .search-form {
	  margin-top: 10px;
	  margin-left: 30px;
  }
  @media (max-width: 768px) {
	.search-form {
		margin-left: 0px !important;
		margin-right: 0px !important;
	}
  }
  
  .search-field {
	background-color: transparent;
	background-image: url(../../node_modules/bootstrap-icons/icons/search.svg);
	background-position: 5px center;
	background-repeat: no-repeat;
	background-size: 20px 20px;
	border: none;
	cursor: pointer;
	height: 30px;
	margin: 3px 0;
	padding: 0 0 0 34px;
	position: relative;
	-webkit-transition: width 400ms ease, background 400ms ease;
	transition:         width 400ms ease, background 400ms ease;
	width: 0;
	filter: invert(1);
  }
  
  .search-field:focus {
	background-color: #ffffff67;
	border: solid #e9e9e900;
	border-width: 0 0 0 0;
	cursor: text;
	outline: 0;
	width: 230px;
  }
  
  .search-submit {
	display: none;
  }

/** HOMEPAGE template **/ 
//  Main section
p#breadcrumbs {
	padding-top: 1rem;
}

main.videofull {
	padding: 0px;
	margin-top: 0px !important;
	video {
		z-index: -1;
		position: relative;
	}
}
.video-overflow {
	background-color: #00000050;
}
.content-over {
	color: #fff;
	display: flex;
	top: 0px;
    flex-direction: column;
	top: 20vh;
	z-index: 0;
}
@media (max-width: 767px) {
	.content-over {
		top: 9vh;
	}
}



// Section proyectos-slider
section#proyectos-slider {
	.btn.btn-link {
		color: $gray-900;
		padding-left: 0px;
	}
	.btn.btn-link.active {
		text-decoration: underline;
	}
	.card {
		// box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
		border: none;
	  }
	.card img {
		max-width: 100%;
	}

	.card-body {
		position: absolute;
		top: 70%;
		width: 100%;
		justify-content: center;
		display: flex;
		.title {
			text-shadow: 2px 2px 5px rgba(0,0,0,0.6);
			text-align: center;
		}
		.link {
			text-align: center;
		}
	  }
	.btn-card {
		border-radius: 20px;
	}
}
  .carousel-inner {
	// padding: 1em;
  }
  .carousel-control-prev-icon {
	width: 40%;
	height: 40%;
	background-image: url(/wp-content/themes/ue-theme/node_modules/bootstrap-icons/icons/chevron-left.svg);	
}
.carousel-control-next-icon {
	width: 40%;
	height: 40%;
	background-image: url(/wp-content/themes/ue-theme/node_modules/bootstrap-icons/icons/chevron-right.svg);	
}
  .carousel-control-prev,
  .carousel-control-next {
	// background-color: #e1e1e1;
	width: 20vh;
	height: 20vh;
	// border-radius: 50%;
	top: 50%;
	transform: translateY(-50%);
  }
  .carousel-control-prev {
	justify-content: left;
	left: -3rem;
  }
  .carousel-control-next {
	justify-content: right;
	right: -3rem;
  }  
  
  @media (min-width: 768px) {
	.carousel-item {
	  margin-right: 1rem;
	  flex: 0 0 24%;
	  display: block;
	  overflow: hidden;
	}
	.carousel-inner {
	  display: flex;
	}
  }
  .card .img-wrapper {
	  max-width: 100%;
	  display: flex;
	  justify-content: center;
	  flex-basis: content;
	  align-items: center;
  }
  .card img {
	  max-height: 100%;
  }
  @media (max-width: 767px) {
	.carousel-control-prev {
		transform: translateX(40%);
		width: 40vh;
		filter: invert(99%) sepia(0%) saturate(7498%) hue-rotate(70deg) brightness(99%) contrast(105%);
	}
	.carousel-control-next {
		transform: translateX(-40%);
		width: 40vh;
		filter: invert(99%) sepia(0%) saturate(7498%) hue-rotate(70deg) brightness(99%) contrast(105%);
	}
	.card .img-wrapper {
	  height: 17em;
	}
  }

// Block tomemos un cafe
section#banner-proxima-inversion {
	.img-overflow {
		overflow: hidden;
		max-height: 300px;
		background-color: #91610775;
		display: flex;
		align-content: center;
		flex-wrap: wrap;

		.block-display {
			position: absolute;
    		width: 100%;
    		padding-top: 2rem;
		}
	}
	img {
		width: 100%;
		z-index: -1;
		position: relative;
	}
	.btn {
		border-radius: 20px;
	}
}
/* ... */

